crates/es-fluent-core/tests/snapshots/struct_kv_tests__struct_kv_analysis_with_this_and_keys_this_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/struct_kv_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "UserLabelKvFtl",
    variants: [
      FtlVariant(
        name: "UserLabelKvFtl",
        ftl_key: FluentKey("user_label_kv_ftl_this"),
        args: [],
      ),
      FtlVariant(
        name: "name",
        ftl_key: FluentKey("user_label_kv_ftl-name"),
        args: [],
      ),
      FtlVariant(
        name: "age",
        ftl_key: FluentKey("user_label_kv_ftl-age"),
        args: [],
      ),
    ],
  ),
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "User",
    variants: [
      FtlVariant(
        name: "User",
        ftl_key: FluentKey("user_this"),
        args: [],
      ),
    ],
  ),
]
