crates/es-fluent-core/tests/snapshots/struct_kv_tests__struct_kv_analysis_with_this_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/struct_kv_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "UserKvFtl",
    variants: [
      FtlVariant(
        name: "name",
        ftl_key: FluentKey("user_kv_ftl-name"),
        args: [],
      ),
      FtlVariant(
        name: "age",
        ftl_key: FluentKey("user_kv_ftl-age"),
        args: [],
      ),
    ],
  ),
]
